--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,25 @@
 version: '3.8'
+
 services:
   app:
     build:
       context: .
-    ports:
-      - "8080:80"
+      dockerfile: Dockerfile
+    container_name: laravel_app
     volumes:
       - .:/var/www/html
+    ports:
+      - "8000:80"
+    depends_on:
+      - db
+
+  db:
+    image: mysql:8.0
+    container_name: mysql_db
     environment:
-      APP_KEY: base64:YOUR_KEY_HERE
-      APP_ENV: local
-      APP_DEBUG: true
-      DB_CONNECTION: null
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: your_database_name
+      MYSQL_USER: root
+      MYSQL_PASSWORD: root
+    ports:
+      - "3306:3306"
