--- a/render.yaml
+++ b/render.yaml
@@ -13,4 +13,14 @@ services:
       - key: APP_DEBUG
         value: true
       - key: DB_CONNECTION
-        value: null
+        value: mysql
+      - key: DB_HOST
+        value: sql12.freesqldatabase.com
+      - key: DB_PORT
+        value: 3306
+      - key: DB_DATABASE
+        value: sql12769213
+      - key: DB_USERNAME
+        value: sql12769213
+      - key: DB_PASSWORD
+        value: ZC1pKBiU2W
